<resources>
    <string name="app_name">TERI</string>

    <!--ip address-->
    <string name="ipon">http://fantasticfive.000webhostapp.com</string>
    <string name="ip">http://192.168.43.129/fantasticfive</string>

    <!--tab name-->
    <string name="tab1">Jadwal Kuliah</string>
    <string name="tab2">Tugas</string>
    <string name="tab3">Dosen</string>
    <string name="tab4">Jadwal Ujian</string>

    <!--upload-->
    <string name="title_activity_new_message">Form Upload Tugas</string>
    <string name="hint_kodematkul">Kode Mata Kuliah</string>
    <string name="hint_kodetugas">Kode Tugas</string>
    <string name="hint_nama">Nama</string>
    <string name="hint_nim">NIM</string>
    <string name="hint_file">Pilih File</string>
    <string name="unggah">Unggah</string>


    <!--Tab 1-->
    <string name="cd_main_image">main image</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!--navigation drawer menu name-->
    <string name="drawer_home">Beranda</string>
    <string name="drawer_facebook">Facebook</string>
    <string name="drawer_gPlus">Google+</string>
    <string name="drawer_youtube">YouTube</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_exit">Keluar</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>
    <string name="app_email">fantasticfive</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="of">of</string>
    <string name="result">Result</string>
    <string name="equals_to">=</string>
    <string name="percent_text">%</string>
    <string name="discount">Discount</string>
    <string name="actual_price">Percentage</string>
    <string name="percent">What is</string>
    <string name="activity_done">Done</string>
    <string name="btn_calculate">Calculate</string>


    <string name="hint_actual_price">Enter Price</string>
    <string name="hint_discount">Enter Discount</string>
    <string name="final_price_is">Final Price is</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_percentage">What is </string>
    <string name="hint_percentage_is">Percent of </string>
    <string name="equal_to">=</string>

    <!--EMI-->

    <string name="hint_principal">Principal Amount</string>
    <string name="hint_interest">Interest rate per Year</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI</string>
    <string name="hint_interest_total">Total Interest for Loan</string>

    <!--Action Bar-->
    <string name="action_profile">Profile</string>
    <string name="action_share">Information</string>
    <string name="action_rate">Rate App</string>
    <string name="action_more">More Apps</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstiial_delay">5000</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Exit Dialog-->
    <string name="message">Do you want to exit?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
</resources>
