<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id.fantasticfive.teri.mahasiswa.activities.FormUploadActivity"
    tools:showIn="@layout/activity_form_upload">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_kodetugas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_kodetugas" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_nama"
                android:editable="false"
                android:hint="@string/hint_nama"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_nim" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/input_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_file"
                android:textSize="12sp"
                android:background="@color/textColorPrimary"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/uploaded_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Uploaded file"
                android:textSize="12sp"
                android:layout_marginLeft="18dp"
                android:background="@color/textColorPrimary"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/unggah"
        android:id="@+id/b_upload"
        android:background="@color/textColorPrimary"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>
